--- a/biblioteca_digital/libros/static/libros/css/styles.css
+++ b/biblioteca_digital/libros/static/libros/css/styles.css
@@ -1,126 +1,68 @@
+html, body {
+    height: 100%;
+}
+
 body {
+    display: flex;
+    flex-direction: column;
     font-family: Arial, sans-serif;
     background-color: #f4f4f4;
+    color: #333;
     margin: 0;
     padding: 0;
 }
 
 header {
-    background-color: #333;
-    color: #fff;
-    padding: 15px;
+    background-color: #4CAF50;
+    color: white;
     text-align: center;
+    padding: 20px 0;
 }
 
-.container {
-    width: 80%;
-    margin: 10px auto;
-    background: #fff;
+main {
+    flex: 1; /* Esto permite que el main ocupe el espacio restante */
+    max-width: 1200px;
+    margin: 20px auto;
     padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    background-color: white;
+    border-radius: 5px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
 
-h1 {
-    color: #fff;
-    margin-bottom: -20px;
-}
-
-header p {
-    padding: 10px;
-}
-
-.book-list {
-    list-style: none;
-    padding: 20px;
-}
-
-.book-list li {
-    padding: 10px;
-    margin: 20px 0;
-    background: #f9f9f9;
-    border-left: 5px solid #333;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-    gap:20px
-}
-
-.book-list li:hover {
-    background: #e9e9e9;
-}
-
-.book-list li strong {
-    display: block;
-    font-size: 1.2em;
-    color: #333;
-}
-
-.book-details {
-    margin: 5px 0;
-    color: #666;
-}
-
-.footer {
-    background-color: #333;
-    color: #fff;
+h2 {
     text-align: center;
-    padding: 10px;
-    position: fixed;
-    bottom: 0;
+    margin-bottom: 20px;
+}
+
+table {
     width: 100%;
+    border-collapse: collapse;
 }
 
-a {
-    color: #333;
-    text-decoration: none;
+th, td {
+    padding: 12px;
+    text-align: left;
+    border-bottom: 1px solid #ddd;
 }
 
-a:hover {
-    color: #666;
+th {
+    background-color: #f2f2f2;
 }
 
-/* Estilo para el contenedor del buscador */
-.search-container {
-    margin: 2%;
-    display: flex;
-    align-items: center;
-    background-color: #f4f4f4;
-    width: 10%;
-    height: 10%;
-    padding: 1%;
-    border-radius: 5%;
+tr:hover {
+    background-color: #f1f1f1;
 }
 
-/* Estilo para el ícono de la lupa */
-.search-icon {
-    cursor: pointer;
-    font-size: 24px;
+img {
+    border-radius: 5px;
+    width: 250px; /* Cambia a un tamaño más adecuado */
+    height: auto; /* Mantiene la relación de aspecto */
 }
 
-/* Estilo para el input del buscador */
-.search-input {
-    display: none;
-    margin-left: 8px;
-    padding: 5px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-}
-
-/* Mostrar el input del buscador cuando está activo */
-.search-input.active {
-    display: inline-block;
-}
-
-.search-container input {
-    width: 100px;
-    font-size: 18px;
-}
-
-.search-icon {
-    font-size: 42px;
+footer {
+    text-align: center;
+    padding: 10px 0;
+    background-color: #4CAF50;
+    color: white;
+    width: 100%;
 }
