--- a/biblioteca_digital/libros/templates/libros/lista_libros.html
+++ b/biblioteca_digital/libros/templates/libros/lista_libros.html
@@ -1,4 +1,3 @@
-<!-- lista_libros.html -->
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -31,6 +30,7 @@
                     <th>Título</th>
                     <th>Autor</th>
                     <th>Editorial</th>
+                    <th>Edición</th>
                     <th>Código de Materia</th>
                     <th>Resumen</th>
                     <th>Imagen</th>
@@ -44,16 +44,20 @@
                     <td>{{ libro.titulo }}</td>
                     <td>{{ libro.autor }}</td>
                     <td>{{ libro.editorial }}</td>
+                    <td>{{ libro.edicion }}</td>
                     <td>{{ libro.codigo_materia }}</td>
                     <td>{{ libro.resumen }}</td>
                     <td><img src="{{ libro.img }}" alt="{{ libro.titulo }}" width="100"></td>
                     <td>
-                        <img src="{% static 'libros/img/trash.png' %}" alt="Eliminar" onclick="confirmarBaja({{ libro.id_libro }})" style="cursor: pointer;">
+                        <a href="{% url 'editar_libro' libro.id_libro %}">
+                            <img src="{% static 'libros/img/lapiz.png' %}" alt="Editar" style="cursor: pointer; width: 20px; height: 20px;">
+                        </a>
+                        <img src="{% static 'libros/img/trash.png' %}" alt="Eliminar" onclick="confirmarBaja({{ libro.id_libro }})" style="cursor: pointer; width: 20px; height: 20px;">
                     </td>
                 </tr>
                 {% empty %}
                 <tr>
-                    <td colspan="8">No hay libros disponibles.</td>
+                    <td colspan="9">No hay libros disponibles.</td>
                 </tr>
                 {% endfor %}
             </tbody>
