carga masiva csv final

--- a/biblioteca_digital/libros/templates/libros/varios.html
+++ b/biblioteca_digital/libros/templates/libros/varios.html
@@ -52,7 +52,7 @@
                 <tr>
                     <th>ID</th>
                     <th>Tipo</th>
-                    <th>Número de Ejemplar</th>
+                    <th>Cantidad</th>
                     <th>Acciones</th>
                 </tr>
             </thead>
