--- a/biblioteca_digital/libros/templates/libros/notebook.html
+++ b/biblioteca_digital/libros/templates/libros/notebook.html
@@ -53,7 +53,7 @@
                     <th>ID</th>
                     <th>Marca</th>
                     <th>Modelo</th>
-                    <th>Número de Ejemplar</th>
+                    <th>Cantidad</th>
                     <th>Acciones</th>
                 </tr>
             </thead>
